# acatome-store

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
src/acatome_store/: __init__.py  _helpers.py  cli.py  config.py  models.py  store.py  vector.py
tests/: conftest.py  test_config.py  test_cross_corpus_search.py  test_direct_write_embedding.py  test_links.py  test_store.py  test_vector.py
