[project]
name = "acatome-store"
version = "0.4.0"
description = "Persistent storage, dedup, metadata queries, and semantic search for acatome bundles"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{name = "Reto Stamm", email = "reto@retostamm.com"}]
readme = "README.md"
keywords = ["scientific-papers", "storage", "semantic-search", "citations", "sqlite", "postgres"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "sqlalchemy>=2.0",
    "llama-index-core>=0.11",
    "llama-index-vector-stores-chroma>=0.2",
    "chromadb>=0.5",
    "precis-summary>=0.1.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/acatome/acatome-store"
Repository = "https://github.com/acatome/acatome-store"
Issues = "https://github.com/acatome/acatome-store/issues"

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
]
postgres = [
    "psycopg[binary]>=3.0",
    "pgvector>=0.3",
]
mysql = [
    "pymysql>=1.0",
]
neo4j = [
    "neo4j>=5.0",
]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5",
]

[project.scripts]
acatome-store = "acatome_store.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_store"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.bumpversion]
current_version = "0.4.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/acatome_store/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
