[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acatome-store"
version = "0.6.0"
description = "Persistent storage, dedup, metadata queries, and semantic search for acatome bundles"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = ["scientific-papers", "storage", "semantic-search", "citations", "sqlite", "postgres"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "sqlalchemy>=2.0",
    "llama-index-core>=0.11",
    "llama-index-vector-stores-chroma>=0.2",
    "chromadb>=0.5",
    "precis-summary>=0.1.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/retospect/acatome-store"
Repository = "https://github.com/retospect/acatome-store"

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]
postgres = ["psycopg[binary]>=3.0", "pgvector>=0.3"]
mysql = ["pymysql>=1.0"]
neo4j = ["neo4j>=5.0"]

[project.scripts]
acatome-store = "acatome_store.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_store"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
