[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acatome-store"
version = "0.6.0"
description = "Persistent storage, dedup, metadata queries, and semantic search for acatome bundles"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = ["scientific-papers", "storage", "semantic-search", "citations", "sqlite", "postgres"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "sqlalchemy>=2.0",
    "llama-index-core>=0.11",
    "llama-index-vector-stores-chroma>=0.2",
    "chromadb>=0.5",
    "precis-summary>=0.1.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/retospect/acatome-store"
Repository = "https://github.com/retospect/acatome-store"

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]
postgres = ["psycopg[binary]>=3.0", "pgvector>=0.3"]
mysql = ["pymysql>=1.0"]
neo4j = ["neo4j>=5.0"]

[project.scripts]
acatome-store = "acatome_store.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_store"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",    # function-call-in-default-argument (typer pattern)
    "B904",    # raise-without-from-inside-except
    "E501",    # line-too-long (formatter handles what it can)
    "E741",    # ambiguous-variable-name
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
    "RUF012",  # mutable-class-default (SQLAlchemy/Pydantic models)
    "SIM102",  # collapsible-if
    "SIM103",  # needless-bool
    "SIM105",  # suppressible-exception
    "SIM108",  # if-else-block-instead-of-if-exp
    "SIM110",  # reimplemented-builtin
    "SIM117",  # multiple-with-statements
    "B007",    # unused-loop-control-variable
    "B905",    # zip-without-explicit-strict
    "RUF005",  # collection-literal-concatenation
    "RUF006",  # asyncio-dangling-task
    "RUF013",  # implicit-optional
    "RUF043",  # match-metacharacter-unescaped
    "UP036",   # outdated-version-block
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B007", "E402", "E731", "E741", "F841", "RUF012", "RUF015", "RUF059", "UP036"]
"src/**" = ["E402", "F841", "RUF059"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
